opps, now, here is that README.2

--- a/README.2
+++ b/README.2
@@ -1,3 +1,6 @@
 So, switches work nice now, not sure how to update this repo, trying to 
 just delete the whole project, copied in the new one (by the same name) and 
 will try to push it up. 
+
+The project still does not show more that the first 3 section, and the 
+header for the third section. Why? 
